# sai

./: .gitignore  README.md
.hemtt/: project.toml
.hemtt/missions/sai_test.Stratis/: init.sqf  mission.sqm
addons/artillery/: $PBOPREFIX$  XEH_PREP.hpp  XEH_postInit.sqf  XEH_postInitServer.sqf  script_component.hpp
addons/artillery/functions/: fnc_register.sqf  fnc_set.sqf
addons/commander/: $PBOPREFIX$  XEH_PREP.hpp  XEH_postInitClient.sqf  XEH_postInitServer.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/commander/functions/: fnc_register.sqf
addons/main/: $PBOPREFIX$  script_mod.hpp
extension/: Cargo.toml  Makefile.toml
extension/src/: lib.rs  settings.rs
extension/src/client/: mod.rs  speak.rs  spoke.rs
extension/src/client/spoke/: local.rs  mod.rs  openai.rs
extension/src/server/: mod.rs  response.rs
extension/src/server/api/: mod.rs  speak.rs  spoke.rs
extension/src/server/commander/: artillery.rs  mod.rs
